# touch-grass

./: .gitignore  LICENSE  README.md  activity_classifier.py  activity_report.py  create_touch_grass_task.bat  delete_touch_grass_task.bat  pyproject.toml  report_builder.py  requirements.txt  run_touch_grass_report.bat  setup_cron.py  touch_grass.py
web/: app.js  colors.json  d3pie.js  index.html
