[project]
name = "touch-grass"
version = "1.0.0"
description = "Desktop activity tracker that reminds you to go outside"
authors = [
    { name = "Manasvi Tiwari", email = "manasvi.tiwari@proton.me" }
]
dependencies = [
    "click>=8.1.8",
    "Jinja2>=3.1.4",
    "python-crontab>=3.0.2", 
    "python-dateutil>=2.9.0",
    "simplejson>=3.19.2",
    "six>=1.16.0",
    "psutil>=5.9.8",
    "pywin32>=306; sys_platform == 'win32'"
]
requires-python = ">=3.8"

# CRITICAL: Tell setuptools this is not a package
[tool.setuptools]
packages = []

# Alternative approach if above doesn't work:
[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"